todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: file-share
      containers:
        - name: todo-app
          image: dubeaka/todo-app:5.0
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/files
